--- a/src/components/TeamMember/TeamMember.css
+++ b/src/components/TeamMember/TeamMember.css
@@ -44,7 +44,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 5;
+  z-index: 11;
 }
 
 .modal {
@@ -52,7 +52,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 5;
+  z-index: 11;
 }
 
 @media screen and (max-width: 580px) {
